# auto-matching-nuxt/src/plugins/api.js
@@ -420,13 +420,13 @@ export const getApiUsersSearchDbURL = function(parameters = {}) {
 }
 /**
  * 掲示板キーワード検索
- * request: getApiUsersSearchKeyword
- * url: getApiUsersSearchKeywordURL
- * method: getApiUsersSearchKeyword_TYPE
- * raw_url: getApiUsersSearchKeyword_RAW_URL
+ * request: postApiUsersSearchKeyword
+ * url: postApiUsersSearchKeywordURL
+ * method: postApiUsersSearchKeyword_TYPE
+ * raw_url: postApiUsersSearchKeyword_RAW_URL
  * @param attributes - 検索クエリ
  */
-export const getApiUsersSearchKeyword = function(parameters = {}) {
+export const postApiUsersSearchKeyword = function(parameters = {}) {
   const domain = parameters.$domain ? parameters.$domain : getDomain()
   const config = parameters.$config
   let path = '/api/users/search/keyword'
@@ -441,15 +441,15 @@ export const getApiUsersSearchKeyword = function(parameters = {}) {
       queryParameters[parameterName] = parameters.$queryParameters[parameterName]
     });
   }
-  return request('get', domain + path, body, queryParameters, form, config)
+  return request('post', domain + path, body, queryParameters, form, config)
 }
-export const getApiUsersSearchKeyword_RAW_URL = function() {
+export const postApiUsersSearchKeyword_RAW_URL = function() {
   return '/api/users/search/keyword'
 }
-export const getApiUsersSearchKeyword_TYPE = function() {
-  return 'get'
+export const postApiUsersSearchKeyword_TYPE = function() {
+  return 'post'
 }
-export const getApiUsersSearchKeywordURL = function(parameters = {}) {
+export const postApiUsersSearchKeywordURL = function(parameters = {}) {
   let queryParameters = {}
   const domain = parameters.$domain ? parameters.$domain : getDomain()
   let path = '/api/users/search/keyword'
@@ -467,7 +467,7 @@ export const getApiUsersSearchKeywordURL = function(parameters = {}) {
  * url: postApiUsersSearchRealtimeURL
  * method: postApiUsersSearchRealtime_TYPE
  * raw_url: postApiUsersSearchRealtime_RAW_URL
- * @param attributes - 投稿サイト
+ * @param attributes - 
  */
 export const postApiUsersSearchRealtime = function(parameters = {}) {
   const domain = parameters.$domain ? parameters.$domain : getDomain()
@@ -496,6 +496,49 @@ export const postApiUsersSearchRealtimeURL = function(parameters = {}) {
   let queryParameters = {}
   const domain = parameters.$domain ? parameters.$domain : getDomain()
   let path = '/api/users/search/realtime'
+  if (parameters.$queryParameters) {
+    Object.keys(parameters.$queryParameters).forEach(function(parameterName) {
+      queryParameters[parameterName] = parameters.$queryParameters[parameterName]
+    })
+  }
+  let keys = Object.keys(queryParameters)
+  return domain + path + (keys.length > 0 ? '?' + (keys.map(key => key + '=' + encodeURIComponent(queryParameters[key])).join('&')) : '')
+}
+/**
+ * 掲示板検索結果
+ * request: postApiUsersSearchResult
+ * url: postApiUsersSearchResultURL
+ * method: postApiUsersSearchResult_TYPE
+ * raw_url: postApiUsersSearchResult_RAW_URL
+ * @param attributes - 
+ */
+export const postApiUsersSearchResult = function(parameters = {}) {
+  const domain = parameters.$domain ? parameters.$domain : getDomain()
+  const config = parameters.$config
+  let path = '/api/users/search/result'
+  let body
+  let queryParameters = {}
+  let form = {}
+  if (parameters['attributes'] !== undefined) {
+    body = parameters['attributes']
+  }
+  if (parameters.$queryParameters) {
+    Object.keys(parameters.$queryParameters).forEach(function(parameterName) {
+      queryParameters[parameterName] = parameters.$queryParameters[parameterName]
+    });
+  }
+  return request('post', domain + path, body, queryParameters, form, config)
+}
+export const postApiUsersSearchResult_RAW_URL = function() {
+  return '/api/users/search/result'
+}
+export const postApiUsersSearchResult_TYPE = function() {
+  return 'post'
+}
+export const postApiUsersSearchResultURL = function(parameters = {}) {
+  let queryParameters = {}
+  const domain = parameters.$domain ? parameters.$domain : getDomain()
+  let path = '/api/users/search/result'
   if (parameters.$queryParameters) {
     Object.keys(parameters.$queryParameters).forEach(function(parameterName) {
       queryParameters[parameterName] = parameters.$queryParameters[parameterName]
